chapter07/gamma-echo.yaml
apiVersion: v1
kind: Service
metadata:
  name: gamma-echo
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
