chapter07/lab-gamma-manifest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gamma
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-v1
  namespace: gamma
  labels:
    app: echo
spec:
  selector:
    matchLabels:
      app: echo
      version: v1
  template:
    metadata:
      labels:
        app: echo
        version: v1
    spec:
      containers:
      - name: echo
        image: gcr.io/k8s-staging-gateway-api/echo-advanced:v20240412-v1.0.0-394-g40c666fd
        imagePullPolicy: IfNotPresent
        args:
        - --tcp=9090
        - --port=8080
        - --grpc=7070
        - --port=8443
        - --tls=8443
        - --crt=/cert.crt
        - --key=/cert.key
---
apiVersion: v1
kind: Service
metadata:
  name: echo-v1
  namespace: gamma
spec:
  selector:
    app: echo
    version: v1
  ports:
  - name: http
    port: 80
    appProtocol: http
    targetPort: 8080
  - name: http-alt
    port: 8080
    appProtocol: http
  - name: https
    port: 443
    targetPort: 8443
  - name: tcp
    port: 9090
  - name: grpc
    port: 7070
    appProtocol: grpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-v2
  namespace: gamma
  labels:
    app: echo
spec:
  selector:
    matchLabels:
      app: echo
      version: v2
  template:
    metadata:
      labels:
        app: echo
        version: v2
    spec:
      containers:
      - name: echo
        image: gcr.io/k8s-staging-gateway-api/echo-advanced:v20240412-v1.0.0-394-g40c666fd
        imagePullPolicy: IfNotPresent
        args:
        - --tcp=9090
        - --port=8080
        - --grpc=7070
        - --port=8443
        - --tls=8443
        - --crt=/cert.crt
        - --key=/cert.key
---
apiVersion: v1
kind: Service
metadata:
  name: echo-v2
  namespace: gamma
spec:
  selector:
    app: echo
    version: v2
  ports:
  - name: http
    port: 80
    appProtocol: http
    targetPort: 8080
  - name: http-alt
    port: 8080
    appProtocol: http
  - name: https
    port: 443
    targetPort: 8443
  - name: tcp
    port: 9090
  - name: grpc
    port: 7070
    appProtocol: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: gamma
spec:
  selector:
    app: echo
  ports:
  - name: http
    port: 80
    appProtocol: http
    targetPort: 8080
  - name: http-alt
    port: 8080
    appProtocol: http
  - name: https
    port: 443
    targetPort: 8443
  - name: tcp
    port: 9090
  - name: grpc
    port: 7070
    appProtocol: grpc
---
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: gamma
spec:
  containers:
  - name: netshoot
    image: nicolaka/netshoot:latest
    command: ["sleep", "infinite"]
